ss - fix scroll-x issue on mobile

--- a/src/page-singer-songwriter/singer-songwriter.scss
+++ b/src/page-singer-songwriter/singer-songwriter.scss
@@ -108,7 +108,8 @@ body {
 .content-wrap {
     padding: 0 2.4rem;
     height: calc(100% - 128px);
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .content-viewer {
